syntax = "proto3";
package wormhole_foundation.wormholechain.wormhole;

option go_package = "github.com/wormhole-foundation/wormhole-chain/x/wormhole/types";

message GuardianKey {

  bytes key = 1;
}
